# path-graph

./: .env.dev.local.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Makefile  README.md  ROADMAP.md
pipeline/: DESIGN.md  Dockerfile  pyproject.toml
pipeline/dev/: sample.txt
pipeline/src/path_graph/: __init__.py  config.py  ids.py
pipeline/src/path_graph/admin/: __init__.py  credential_settings.py  credentials.py  downstream.py  lifecycle.py  projects.py  retrieval.py  runner.py  sources.py  uploads.py
pipeline/src/path_graph/chunkers/: chunk.py  pymupdf_json.py
pipeline/src/path_graph/collectors/: gdrive.py  gdrive_auth.py  ms_graph_auth.py  onedrive.py  remote.py  sharepoint.py  web.py
pipeline/src/path_graph/console/: __init__.py  config.py  contracts.py  credentials.py  downstream.py  meta.py  (+8 more)
pipeline/tests/: conftest.py  constants.py  test_admin_lifecycle.py  test_agent_artifact_io.py  test_agent_bundles.py  test_agent_cache.py  test_agent_invoke.py  test_agent_invoke_async.py  test_apply_graphrag_success.py  test_batch_manifest_meta.py  test_blob_store.py  test_blocks_adapters.py  test_blocks_extractors.py  test_chunk_type_aware.py  test_chunkers.py  test_collect_source_step.py  test_collect_source_sync.py  test_collect_sync.py  test_collectors.py  test_community.py  test_config.py  test_console_exports.py  test_contracts.py  test_credential_settings.py  test_credentials_store.py  test_downstream_aggregate.py  test_embed.py  test_entity_vid.py  test_export_project_graph_semantic_scope.py  test_gdrive_onedrive_collector.py  test_graph.py  test_graph_context.py  test_graph_context_limits.py  test_graph_extractor_batching.py  test_graph_extractor_langgraph.py  test_graph_extractor_output_schema.py  test_graph_extractor_sanitize.py  test_graph_pipeline_cache.py  test_graph_pipeline_opik_fixture.py  test_graphrag.py  (+44 more)
pipeline/workflows/: ingest_rag.py
(+176 files in other folders)
