[project]
name = "path-graph"
version = "0.1.0"
description = "RAG / Graph / Wiki knowledge pipeline"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.27",
    "markitdown[pdf,docx,xlsx,xls]>=0.1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "qdrant-client>=1.9",
    "boto3>=1.34",
    "nebula3-python>=3.8",
    "psycopg[binary]>=3.2",
    "graspologic-native>=1.2",
    "msal>=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "hera>=5.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-packages = true

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
asyncio_mode = "auto"
